Revision history for Open-This

{{$NEXT}}
    - to_editor_args() now accepts an array

0.000004  2018-02-08 19:06:09Z
    - Try to fix some tests when running under MSWin32

0.000003  2018-02-08 17:11:27Z
    - parse_text() now accepts an array, which means less situations where args
      to ot need to be quoted at the command line

0.000002  2018-02-07 17:05:20Z
    - Pod formatting

0.000001  2018-02-06 16:14:35Z
    - Initial release.