@@ -33,6 +33,17 @@ use Test::Differences;
     is( $name, 't/lib/Foo/Bar.pm', 'found local file' );
 }
 
+{
+    local $ENV{OPEN_THIS_LIBS} = 'lib,t/lib,t/other-lib';
+
+    my $text = 'Foo::Baz';
+    my $name = Open::This::_maybe_find_local_file($text);
+    is(
+        $name, 't/other-lib/Foo/Baz.pm',
+        'found local file in non-standard location'
+    );
+}
+
 eq_or_diff(
     parse_text('t/lib/Foo/Bar.pm line 222.'),
     { file_name => 't/lib/Foo/Bar.pm', line_number => 222, },
