@@ -1,0 +1,6 @@
+package Foo::Baz;
+
+sub do_something_else {
+}
+
+1;
